--- a/08-dataviz.Rmd
+++ b/08-dataviz.Rmd
@@ -1,5 +1,15 @@
 # Data and visualisation
 
+::: {.rmdimportant}
+
+**Monday:** Wrap up previous topic and introduce what you've pre-read about.  Chat.  Play.  Work some examples.
+
+**Wednesday:**  Work more examples.  Chat as needed.  _Live our best lives._  :).  
+
+**Friday:** Apply what we've learned -- demonstrate your mastery (typically in the form of a quiz, lab, or assignment.  Rinse.  Repeat.
+
+:::
+
 ```{r packages, echo=FALSE, message=FALSE, warning=FALSE}
 library(tidyverse)
 library(magick)
